--- a/UniversityClassifier/UniversityClassifier.csproj
+++ b/UniversityClassifier/UniversityClassifier.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="academicInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="academicInfo.Designer.cs">
+      <DependentUpon>academicInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="NewUserForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +67,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="userAccount.cs" />
+    <EmbeddedResource Include="academicInfo.resx">
+      <DependentUpon>academicInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="NewUserForm.resx">
       <DependentUpon>NewUserForm.cs</DependentUpon>
     </EmbeddedResource>
