python algo added, still in progress
So far everything has been implemented except the python algo. Functions involving academic data haven't been fully tested yet.

--- a/UniversityClassifier/UniversityClassifier.csproj
+++ b/UniversityClassifier/UniversityClassifier.csproj
@@ -58,6 +58,7 @@
     <Compile Include="NewUserForm.Designer.cs">
       <DependentUpon>NewUserForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="pythonScript.cs" />
     <Compile Include="UCMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +67,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="uniQuery.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="userAccount.cs" />
     <EmbeddedResource Include="academicInfo.resx">
       <DependentUpon>academicInfo.cs</DependentUpon>
