fix mem allocation error
added schoolnameranks class as list for school info

--- a/UniversityClassifier/UniversityClassifier.csproj
+++ b/UniversityClassifier/UniversityClassifier.csproj
@@ -59,6 +59,7 @@
       <DependentUpon>NewUserForm.cs</DependentUpon>
     </Compile>
     <Compile Include="pythonScript.cs" />
+    <Compile Include="schoolNamesRanks.cs" />
     <Compile Include="UCMain.cs">
       <SubType>Form</SubType>
     </Compile>
